# Localtest

./: .gitignore  README.md  network_history.json  network_settings.json  pyproject.toml
localtest/: cli.py
localtest.egg-info/: PKG-INFO
