[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localtest"
version = "1.1.0.b2"
description = "A home to locally running tests such as testing your network speeds!"
readme = "README.md"
authors = [
    { name = "Sabio Tang" }
]
dependencies = [
    "speedtest-cli"
]
requires-python = ">=3.8"

[project.scripts]
localtest = "localtest.cli:main"